<resources>
    <string name="app_name">Lat2_AKB12_10116520_FajarAbdulGhani</string>
    <string name="doesn_t_have_account_register">doesn\'t have account ? <b>Register</b></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="personal">Personal</string>
    <string name="home_adress">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="blood_type">Blood Type</string>
    <string name="job">Job</string>
    <string name="organization">Organization</string>
    <string name="almost_there">Almost There</string>
    <string name="description_almost">Thank you for registering with us. One more\nstep, you need to check your email\nto active your account</string>
    <string name="verify">VERIFY</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="description_verify">We have send verification code to your email</string>
    <string name="enter_verification_code_here">enter verification code here</string>
    <string name="send">SEND</string>
    <string name="doesn_t_get_the_code_resend">doesn\'t get the code? <b>Resend</b></string>
    <string name="name">Fajar Abdul Ghani</string>
    <string name="bloodtype">Blood Type : O</string>
</resources>
