<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".VerifyActivity">
    <TextView
        android:id="@+id/txt_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:text="@string/verify_your_account"
        android:textColor="@color/background"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/desc_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/description_verify"
        android:textColor="@color/background" />

    <EditText
        android:id="@+id/edt_enter_verif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_verify"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/background"
        android:gravity="center"
        android:hint="@string/enter_verification_code_here"
        android:paddingBottom="20dp"
        android:textColor="@color/background"
        android:textColorHint="@color/background"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_enter_verif"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custombutton1"
        android:text="@string/send"
        android:textColor="@color/background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_verify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/doesn_t_get_the_code_resend"
        android:textColor="@color/background"
        android:textSize="13sp" />
</RelativeLayout>