<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:fillViewport="true"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:src="@drawable/ic_setting_logo_red"
            android:tint="@color/background" />


        <EditText
            android:id="@+id/edt_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_logo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/background"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="20dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_username_login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@color/background"
            android:textColorHint="@color/background"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edt_password_login"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custombutton1"
            android:text="@string/login"
            android:textColor="@color/background"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="@color/background" />

        <Button
            android:id="@+id/btn_connect_fb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txt_or"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custombutton1"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:paddingLeft="55dp"
            android:gravity="center"
            android:paddingRight="55dp"
            android:text="@string/connect_with_facebook"
            android:textColor="@color/background"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_connect_fb"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="13sp"
            android:text="@string/doesn_t_have_account_register"
            android:textColor="@color/background" />

    </RelativeLayout>
</ScrollView>